[package]
name = "inf402-takuzu"
version = "0.1.0"
authors = ["Edgar <dev@edgar.bzh>", "Mattéo", "Mathis"]
edition = "2018"

[dependencies]
once_cell = "1.8.0"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["blocking"] }
rocket = "0.4"
rocket_contrib = "0.4.10"
ructe = "0.13.2"
varisat = "0.2.2"

[build-dependencies]
ructe = "0.13"
