[package]
name = "inf402-takuzu"
version = "0.1.0"
authors = ["Edgar <dev@edgar.bzh>", "Mattéo", "Mathis"]
edition = "2021"

[dependencies]
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
rocket = "0.5.0-rc.3"
ructe = "0.16"
varisat = "0.2.2"

[build-dependencies]
ructe = "0.16"
